[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainMenu/LoadGameScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/MainMenu/InGameMenu.gd" type="Script" id=3]

[node name="InGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameScreen" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuCenter" type="CenterContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 67.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MainMenuCenter"]
margin_left = 620.0
margin_top = 317.0
margin_right = 727.0
margin_bottom = 435.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="ResumeButton" type="Button" parent="MainMenu/MainMenuCenter/VBoxContainer"]
margin_right = 107.0
margin_bottom = 26.0
text = "Resume"

[node name="LoadGameButton" type="Button" parent="MainMenu/MainMenuCenter/VBoxContainer"]
margin_top = 46.0
margin_right = 107.0
margin_bottom = 72.0
text = "Load Game"

[node name="MainMenuButton" type="Button" parent="MainMenu/MainMenuCenter/VBoxContainer"]
margin_top = 92.0
margin_right = 107.0
margin_bottom = 118.0
text = "Main Menu"

[connection signal="onClosePressed" from="LoadGameScreen" to="." method="_on_LoadGameScreen_onClosePressed"]
[connection signal="pressed" from="MainMenu/MainMenuCenter/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuCenter/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuCenter/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
